--- a/ITW1/itw1.css
+++ b/ITW1/itw1.css
@@ -8,19 +8,13 @@ body{
     margin: 0;
 }
 
-#page-top{
-    background-image: url("img/bg.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 5%;
-}
-
 a{
     text-decoration: none;
 }
 
 .content{
+    height: 400px;
     width: 100%;
-    max-width: 960px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -49,19 +43,19 @@ a{
     color: #ffffff;
     text-align: center;
     font-weight: lighter;
+    background-image: url("img/bg.jpg");
+    background-repeat: no-repeat;
 }
 
 .dark h1{
     font-size: 62px;
     font-weight: lighter;
-    padding-bottom: 10px;
+
 }
 
 .dark .sub-heading {
     font-size: 16px;
-    padding-left: 225px;
-    padding-right: 250px;
-    padding-bottom: 50px;
+    padding: 20px 400px 50px 375px;
     color: rgba(255, 255, 255, 0.8);
 }
 
@@ -84,6 +78,118 @@ a{
     padding-top: 150px;
     padding-bottom: 200px;
 }
+
+.img-fluid{
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+}
+
+h2{
+    color: #212529;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.descript{
+    color: #868e96;
+    padding-left: 660px;
+}
+.descript h2{
+
+
+    padding-top: 5px;
+    padding-right: 100px;
+
+}
+.descript p{
+    padding-top: 25px;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.linkdown{
+    color: red;
+}
+
+#section-menu{
+    padding-top: 300px;
+    padding-bottom: 250px;
+}
+
+#section-menu h2{
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.tabs{
+    padding-left: 310px;
+
+}
+.tabs li{
+    float: left;
+    padding-left: 20px;
+    font-size: 13px;
+    display: inline;
+}
+
+.btn{
+    color: #868e96;
+    font-size: 13px;
+    text-transform: uppercase;
+    border-style: solid;
+    border-width: 0.8px;
+    border-color: #868e96;
+    padding: 15px 20px;
+}
+
+.active{
+    border-color: #212529;
+    color: #212529;
+}
+
+.menucols ul{
+    list-style-type: none;
+    padding-top: 70px;
+    padding-bottom: 300px;
+    float: left;
+    width: 50%;
+}
+
+.menuitem{
+    float: left;
+}
+.menuitem h3{
+    color: #212529;
+    font-weight: normal;
+    padding-bottom: 10px;
+}
+.menuitem p {
+    color: #868e96;
+    font-weight: normal;
+    padding-bottom: 30px;
+}
+
+.price{
+    float: right;
+    padding-bottom: 50px;
+}
+
+.dark h2{
+    color: #ffffff;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 64px;
+    text-transform: none;
+}
+
+#section-gallery h2{
+    text-align: center;
+    padding-bottom: 50px;
+    padding-top: 100px;
+}
+
 
 
 
